@@ -1,5 +1,6 @@
 package com.in28minutes.functionalprogramming;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.Function;
@@ -38,12 +39,12 @@ public class LambdaBehindTheScreensRunner {
 
 	public static void main(String[] args) {
 
-		List.of(23,43,34,45,36,48).stream()
+		Arrays.asList(23,43,34,45,36,48).stream()
 		.filter(n -> n%2 ==0)
 		.map(n -> n * n)
 		.forEach(e -> System.out.println(e));
 
-		List.of(23,43,34,45,36,48).stream()
+		Arrays.asList(23,43,34,45,36,48).stream()
 		.filter(new EvenNumberPredicate())
 		.map(new NumberSquareMapper())
 		.forEach(new SystemOutConsumer());
@@ -67,7 +68,7 @@ public class LambdaBehindTheScreensRunner {
 		Predicate<? super Integer> evenPredicate = createEvenPredicate();
 		Predicate<? super Integer> oddPredicate = n -> n%2 ==1;
 		
-		List.of(23,43,34,45,36,48).stream()
+		Arrays.asList(23,43,34,45,36,48).stream()
 				.filter(evenPredicate)
 				.map(n -> n * n)
 				.forEach(e -> System.out.println(e));
